--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,10 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+    font-family: 'Beausite';
+    src: url('./fonts/BeausiteClassic-Clear.otf') format("opentype");
+    font-family: 'Geometrica';
+    src: url("./fonts/Geometrica.otf") format("opentype");
+    font-family: 'Libre';
+    src: url("./fonts/LibreBaskerville-Regular.ttf") format("truetype");
+    font-family: 'Bold';
+    src: url("./fonts/LibreBaskerville-Bold.ttf") format("truetype");
 }
