--- a/src/components/HelpVideo/video.css
+++ b/src/components/HelpVideo/video.css
@@ -1,7 +1,12 @@
+
 .video {
-    width: 500px;
-    /* margin-top:-350px; */
-    /* display: block; */
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+
+@media only screen and (max-width: 990px) {
+    .help-row {
+        margin-top: 0;
+    }
 }
