--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -3,5 +3,5 @@
     background-image: url("../../images/background1.png");
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 10px;
+    /* padding: 10px; */
 }
