--- a/src/components/HelpVideo/video.css
+++ b/src/components/HelpVideo/video.css
@@ -2,7 +2,10 @@
 .video {
     margin: auto;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 35px;
+    max-width: 845px;
+    min-width: 350px;
+    width: 70%; 
 }
 
 @media only screen and (max-width: 990px) {
