--- a/src/components/Poster/Poster.css
+++ b/src/components/Poster/Poster.css
@@ -27,9 +27,10 @@
     color: #200d3a;
 }
 .card-footer {
-    margin-top: 40px;
-    font-size: 1.5rem;
+    margin-top: 20px;
+    font-size: 13px;
     color: #91879e;
+    font-family: 'BeausiteClassic-Medium';
 }
 .cardimage {
     background-color: #ffffff;
@@ -51,6 +52,14 @@
     color:#683cff;
     display: inline;
 }
+.content-header {
+    font-family: 'Beausite Classic';
+    font-size: 22px;
+}
+.main-content {
+    font-family: 'Beausite Classic';
+    font-size: 16px;
+}
 .circle{
     border-radius: 50%;
     margin: 50px 5px 5px 5px;
@@ -63,8 +72,9 @@
     text-align: left;
 }
 .sup {
-    font-size: 10px;
-    margin-top:5px;
+    font-size: 13px;
+    font-family: 'Beausite Classic';
+    margin-top:3px;
     color: #ddd3ff;
 
 }
