--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -10,6 +10,9 @@
 .leftwrapper {
     box-shadow: 10px 0 5px -2px #f8f8f8;
 }
+.rightwrapper {
+    box-shadow: inset 10px 0 5px -2px #f8f8f8;
+}
 .footer-left span {
     font-family: 'Beausite Classic';
     display: block;
@@ -30,7 +33,7 @@
     font-family: 'Beausite Classic';
 }
 .card-explanation {
-    margin: 4% 30% 30% 10%;
+    margin: 4% 30% 15% 10%;
     color: #9595b3;
     font-family: 'Beausite Classic';
     font-size: 15px;
@@ -50,7 +53,7 @@
       right 
       bottom  
       no-repeat; 
-    background-size:100% 7% ;
+    background-size:100% 2% ;
   }
 @media only screen and (max-width:990px) {
     .footer-left {
@@ -73,9 +76,6 @@
     }
 }
 @media only screen and (min-width: 1300px) {
-    .leftwrapper {
-        height: 290px;
-    }
     .explain-hidden {
         display: none;
     }
@@ -84,9 +84,6 @@
     }
 }
 @media only screen and (max-width: 1300px) and (min-width: 1100px) {
-    .leftwrapper {
-        height: 250px;
-    }
     .explain-hidden {
         display: none;
     }
@@ -95,9 +92,6 @@
     }
 }
 @media only screen and (max-width: 1100px) and (min-width: 990px) {
-    .leftwrapper {
-        height: 228px;
-    }
     .explain-hidden {
         display: none;
     }
