--- a/src/components/Amount/Amount.css
+++ b/src/components/Amount/Amount.css
@@ -1,7 +1,6 @@
 .amount {
     margin-left: 45%;
     margin-top:90px;
-    float: left;
 }
 .amount img {
     width: 80%;
@@ -54,9 +53,10 @@
         margin-left: auto;
         margin-right: auto;
         text-align: center;
+        float: none;
     }
     .amount img {
-        width: 50%;
+        display: none;
     }
     .amount-detail {
         display:flex;
